tests/NormalTests/paczka1/small_fuzzy/48865285.err
Error in line 4: JVPMg A444 6,7
Error in line 1: TA0q A444 22,2
Error in line 5: JVPMg S115 29,5
Error in line 6: TA0q A984 95,7
Error in line 13: mJSgVgWg A984 316,8
